--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ name = "LELEC210X"
 readme = "README.md"
 requires-python = ">=3.9"
 version = "0.1.0"
+dependencies = [
+    "tensorflow>=2.19.0",
+]
 
 [tool.ruff]
 extend-exclude = ["**/doxygen/**/*.py"]
